...
                                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LhZ-Go-zL7" userLabel="Now Playing Button">
                                                <rect key="frame" x="40" y="5.6666666666666288" width="374" height="33"/>
                                                <accessibility key="accessibilityConfiguration" identifier="nowPlaying"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        <viewLayoutGuide key="safeArea" id="Rf9-Sj-GRF"/>
                    </view>
                    <navigationItem key="navigationItem" title="Radio Spiral" id="OKR-cw-CyI">
                        <barButtonItem key="leftBarButtonItem" title="icon-hamburger" image="icon-hamburger" id="CEi-nw-1dN">
                            <connections>
                                <segue destination="61j-j7-6ve" kind="modal" identifier="ShowMenu" id="MJP-ZO-92b"/>
...
                                <rect key="frame" x="82" y="265" width="250" height="206"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="RadioSpiral" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HWZ-je-blg">
                                        <rect key="frame" x="28" y="140" width="192" height="28"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="About">
                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                            <constraint firstAttribute="height" constant="45" id="9ls-Nq-FcF"/>
                                        </constraints>
                                        <state key="normal" title="btn-play" image="btn-play">
                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                            <constraint firstAttribute="height" constant="45" id="vqL-YC-gUW"/>
                                        </constraints>
                                        <state key="normal" title="btn-stop" image="btn-stop">
                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                    <constraint firstAttribute="height" constant="36" id="m1i-gc-0rZ"/>
                                </constraints>
                                <state key="normal" image="logo">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="Station ID" id="M1Z-0o-hNV" userLabel="Station Title">
                        <barButtonItem key="backBarButtonItem" title="Back" id="2qM-qo-eHk"/>
                    </navigationItem>
                    <nil key="simulatedBottomBarMetrics"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <state key="normal" title="Okay">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="radiospiral.net">
                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="email us!">
                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
